--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@truffle/contract": "^4.2.27",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "web3": "^1.3.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
